use proc builder instead of runtime