@@ -30,7 +30,6 @@ import org.apache.druid.java.util.metrics.cgroups.ProcSelfCgroupDiscoverer;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.Map;
 
@@ -56,11 +55,10 @@ public class CgroupCpuMonitor extends FeedDefiningMonitor
     this.cgroupDiscoverer = cgroupDiscoverer;
     this.dimensions = dimensions;
     try {
-      Process process = Runtime.getRuntime().exec("getconf CLK_TCK");
-      userHz = Long.parseLong(new BufferedReader(new InputStreamReader(
-          process.getInputStream(),
-          StandardCharsets.UTF_8
-      )).readLine());
+      Process p = new ProcessBuilder("getconf", "CLK_TCK").start();
+      BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
+      String line = in.readLine().trim();
+      userHz = Long.valueOf(line);
     }
     catch (IOException | NumberFormatException e) {
       LOG.warn(e, "Error getting the USER_HZ value");
